tests/NormalTests/paczka1/small_fuzzy/51083294.err
Error in line 2: A50 A942 67,7
Error in line 6: jvuD3N4kaBC S614 20,3
